fix: layout shifting is fixed which was caused by sidePanel transition

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,23 +41,6 @@ body {
       overflow-y: auto;
       overflow-x: hidden;
 
-      .bodyOverlay {
-        display: block;
-
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 100%;
-
-        background-color: rgba($color: #000000, $alpha: 0.5);
-
-        opacity: 1;
-        z-index: 1;
-
-        transition: $transitionDuration;
-      }
-
       &.expended {
         left: 0;
         width: calc(100vw);
@@ -67,19 +50,17 @@ body {
         left: 0;
 
         width: calc(100vw);
+      }
 
-        .bodyOverlay {
-          right: 0;
+      &.mainInitialState {
+        left: $asideWidth;
 
-          opacity: 1;
-        }
+        width: calc(100vw - $asideWidth);
 
-        &.expended {
-          .bodyOverlay {
-            right: 100%;
+        @media (max-width: $sidePanelLayoutShiftRes) {
+          left: 0;
 
-            opacity: 0;
-          }
+          width: calc(100vw);
         }
       }
     }
